--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.lq</groupId>
     <artifactId>AutoGenerationScript</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>AutoGenerationScript</name>
     <description>AutoGenerationScript</description>
     <properties>
