--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,29 @@
 spring.profiles.active=@env@
+#spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost/orclpdb
+#spring.datasource.username=ICSHIS6
+#spring.datasource.password=ICSHIS6
+spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@172.16.1.197/orcl
+spring.datasource.username=ICSHIS6
+spring.datasource.password=ICSHIS6
+#spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@172.16.1.41/orcl
+#spring.datasource.username=ICSMHIS6
+#spring.datasource.password=ICSMHIS6
+#spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@172.16.1.184/HISEMR
+#spring.datasource.username=icshis6
+#spring.datasource.password=ics$123
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://172.16.1.197:1433;DatabaseName=IcsHis6
+#spring.datasource.url=jdbc:sqlserver://127.0.0.1:1433;DatabaseName=ics_mhis6
+#spring.datasource.username=sa
+#spring.datasource.password=123456
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://172.16.1.197:1433;DatabaseName=icshis6
 #spring.datasource.username=sa
 #spring.datasource.password=icreate@2022
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://127.0.0.1:1433;DatabaseName=IcsHis6
-spring.datasource.username=sa
-spring.datasource.password=123456
-server.port=10250
+server.port=10255
 server.servlet.session.timeout=43200
 server.tomcat.uri-encoding=UTF-8
 server.tomcat.basedir=/home/temp
@@ -17,3 +33,15 @@ spring.jackson.time-zone=GMT+8
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 # \u6307\u5B9Asql\u6620\u5C04\u6587\u4EF6\u4F4D\u7F6E
 mybatis.mapper-locations=classpath:../java/com/lq/autogenerationscript/mapper/*.xml
+
+#Freemarker \u914D\u7F6E
+spring.freemarker.allow-request-override=false
+spring.freemarker.allow-session-override=false
+spring.freemarker.cache=false
+spring.freemarker.charset=UTF-8
+spring.freemarker.check-template-location=true
+spring.freemarker.content-type=text/html
+spring.freemarker.expose-request-attributes=false
+spring.freemarker.expose-session-attributes=false
+spring.freemarker.suffix=.ftl
+spring.freemarker.template-loader-path=classpath:/templates/
