--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,9 @@
 spring.profiles.active=@env@
-#spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@localhost/orclpdb
-#spring.datasource.username=ICSHIS6
-#spring.datasource.password=ICSHIS6
-spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@172.16.1.197/orcl
-spring.datasource.username=ICSHIS6
-spring.datasource.password=ICSHIS6
-#spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@172.16.1.41/orcl
-#spring.datasource.username=ICSMHIS6
-#spring.datasource.password=ICSMHIS6
-#spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@172.16.1.184/HISEMR
-#spring.datasource.username=icshis6
-#spring.datasource.password=ics$123
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://127.0.0.1:1433;DatabaseName=ics_mhis6
-#spring.datasource.username=sa
-#spring.datasource.password=123456
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://172.16.1.197:1433;DatabaseName=icshis6
-#spring.datasource.username=sa
-#spring.datasource.password=icreate@2022
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://127.0.0.1:1433;DatabaseName=ics_mhis6
+spring.datasource.username=sa
+spring.datasource.password=123456
+
 server.port=10255
 server.servlet.session.timeout=43200
 server.tomcat.uri-encoding=UTF-8
